--- a/brightcovelibrary/src/main/res/layout-sw720dp-land/fragment_blank.xml
+++ b/brightcovelibrary/src/main/res/layout-sw720dp-land/fragment_blank.xml
@@ -25,6 +25,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/black" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/poster_image"
+            android:scaleType="fitXY"
+            android:visibility="gone">
+        </androidx.appcompat.widget.AppCompatImageView>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/poster_image_default"
+            android:scaleType="fitXY"
+            android:visibility="gone">
+        </androidx.appcompat.widget.AppCompatImageView>
+
 
         <FrameLayout
             android:layout_width="match_parent"
