--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -331,6 +331,36 @@
                                 android:textColor="@color/inspection_color"
                                 android:textSize="@dimen/TextSize12"
                                 android:visibility="invisible" />
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:id="@+id/rl_terms_privacy">
+                                <CheckBox
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/terms_privacy_policies"
+                                    android:layout_marginTop="@dimen/NontonSize10"
+                                    android:layout_marginRight="3dp"
+                                    android:padding="4dp"
+                                    android:layout_marginBottom="@dimen/NontonSize10"
+                                    android:buttonTint="@color/white"
+                                    android:checked="true"
+                                    android:gravity="fill"
+                                    android:layout_alignParentLeft="true"
+                                    android:layout_alignParentStart="true"
+                                    />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/terms_privacy_txt"
+                                    android:fontFamily="@font/sukhumvittadmai_normal"
+                                    android:textColor="?attr/app_edit_text_color"
+                                    android:textSize="@dimen/font_small"
+                                    android:layout_marginTop="7dp"
+                                    android:layout_marginBottom="@dimen/NontonSize10"
+                                    />
+                            </LinearLayout>
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -378,6 +408,7 @@
                                     android:visibility="gone"/>
 
                                 <TextView
+                                    android:id="@+id/register_text"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_vertical"
