gap of carousal from top

--- a/app/src/main/res/layout/heading_rails.xml
+++ b/app/src/main/res/layout/heading_rails.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
+        android:id="@+id/main_header_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/header_top_margin">
+        android:layout_marginTop="@dimen/header_top_margin"
+        android:visibility="gone">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/header_title_layout"
