--- a/app/src/main/res/layout/header_recycler_item.xml
+++ b/app/src/main/res/layout/header_recycler_item.xml
@@ -4,7 +4,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/rail_top_margin"
+        android:layout_marginTop="0dp"
         android:orientation="vertical">
 
         <include
