--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -331,42 +331,92 @@
                                 android:textColor="@color/inspection_color"
                                 android:textSize="@dimen/TextSize12"
                                 android:visibility="invisible" />
-                            <LinearLayout
+
+                            <RelativeLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:id="@+id/rl_terms_privacy">
+                                android:layout_height="wrap_content">
+
                                 <CheckBox
+                                    android:id="@+id/terms_privacy_policies"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:id="@+id/terms_privacy_policies"
-                                    android:layout_marginTop="@dimen/NontonSize10"
-                                    android:layout_marginRight="3dp"
-                                    android:padding="4dp"
-                                    android:layout_marginBottom="@dimen/NontonSize10"
+                                    android:layout_alignParentStart="true"
+                                    android:layout_alignParentLeft="true"
                                     android:buttonTint="@color/white"
                                     android:checked="true"
-                                    android:gravity="fill"
-                                    android:layout_alignParentLeft="true"
-                                    android:layout_alignParentStart="true"
-                                    />
+                                    android:gravity="fill" />
+
+                                <LinearLayout
+                                    android:id="@+id/rl_terms_privacy"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="@dimen/_2sdp"
+                                    android:layout_toEndOf="@+id/terms_privacy_policies"
+
+                                    android:orientation="horizontal">
+
+                                    <TextView
+                                        android:id="@+id/tv_agree"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:fontFamily="@font/sukhumvittadmai_normal"
+                                        android:text="@string/agree"
+                                        android:textColor="@color/white"
+                                        android:textSize="@dimen/font_small" />
+
+                                    <TextView
+                                        android:id="@+id/tv_terms"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="@dimen/_2sdp"
+                                        android:fontFamily="@font/sukhumvittadmai_normal"
+                                        android:text="@string/term"
+                                        android:textColor="@color/description_title_yellow"
+                                        android:textSize="@dimen/font_small" />
+
+                                    <TextView
+                                        android:id="@+id/tv_and"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="@dimen/_2sdp"
+                                        android:fontFamily="@font/sukhumvittadmai_normal"
+                                        android:text="@string/and_the"
+                                        android:textColor="@color/white"
+                                        android:textSize="@dimen/font_small" />
+
+                                </LinearLayout>
+
                                 <TextView
+                                    android:id="@+id/tv_privacy"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:id="@+id/terms_privacy_txt"
+                                    android:layout_below="@+id/rl_terms_privacy"
+                                    android:layout_toEndOf="@+id/terms_privacy_policies"
                                     android:fontFamily="@font/sukhumvittadmai_normal"
-                                    android:textColor="?attr/app_edit_text_color"
-                                    android:textSize="@dimen/font_small"
-                                    android:layout_marginTop="7dp"
-                                    android:layout_marginBottom="@dimen/NontonSize10"
-                                    />
-                            </LinearLayout>
+                                    android:text="@string/privacy"
+                                    android:textColor="@color/description_title_yellow"
+                                    android:textSize="@dimen/font_small" />
+
+                                <TextView
+                                    android:id="@+id/tv_privacy_other_text"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_below="@+id/rl_terms_privacy"
+                                    android:layout_marginLeft="@dimen/_2sdp"
+                                    android:layout_toEndOf="@+id/tv_privacy"
+                                    android:fontFamily="@font/sukhumvittadmai_normal"
+                                    android:text="@string/privacy_other_text"
+                                    android:textColor="@color/white"
+                                    android:textSize="@dimen/font_small" />
+
+                            </RelativeLayout>
+
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:gravity="left"
-                                android:layout_gravity="left">
+                                android:layout_gravity="left"
+                                android:gravity="left">
 
                                 <CheckBox
                                     android:id="@+id/termsText"
@@ -404,8 +454,8 @@
                                     android:contentDescription="TODO"
                                     android:scaleType="fitXY"
                                     android:tint="#FFFFFF"
-                                    app:srcCompat="@drawable/register1"
-                                    android:visibility="gone"/>
+                                    android:visibility="gone"
+                                    app:srcCompat="@drawable/register1" />
 
                                 <TextView
                                     android:id="@+id/register_text"
@@ -418,6 +468,7 @@
                                     android:textColor="@color/white"
                                     android:textSize="@dimen/suaRegisterText" />
                             </LinearLayout>
+
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -427,6 +478,7 @@
                                 android:text="@string/or_caps"
                                 android:textColor="?attr/or_text_color"
                                 android:textSize="@dimen/TextSize14" />
+
                             <LinearLayout
                                 android:id="@+id/rlFacebookLogin"
                                 android:layout_width="match_parent"
