--- a/app/src/main/res/drawable-xhdpi/ic_filter.xml
+++ b/app/src/main/res/drawable-xhdpi/ic_filter.xml
@@ -1,9 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:pathData="M19.801,3L3.756,3A0.754,0.754 0,0 0,3.084 3.409a0.764,0.764 0,0 0,0.059 0.8L9.023,12.487l0.006,0.008a1.679,1.679 0,0 1,0.33 1v6.753A0.751,0.751 0,0 0,10.109 21a0.774,0.774 0,0 0,0.3 -0.059l3.3,-1.26a0.716,0.716 0,0 0,0.492 -0.706L14.201,13.492a1.68,1.68 0,0 1,0.33 -1l0.006,-0.008L20.417,4.2a0.764,0.764 0,0 0,0.059 -0.8A0.753,0.753 0,0 0,19.801 3ZM19.801,3"
-        android:fillColor="#f2f2f7"/>
+<vector
+    android:tint="@color/white"
+    android:viewportHeight="24"
+    android:viewportWidth="24" android:height="24dp"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <path android:pathData="M10,18h4v-2h-4v2zM3,6v2h18L21,6L3,6zM6,13h12v-2L6,11v2z"  android:fillColor="#FFFFFF"/>
+
 </vector>
