--- a/brightcovelibrary/src/main/res/layout-sw720dp-land/fragment_blank.xml
+++ b/brightcovelibrary/src/main/res/layout-sw720dp-land/fragment_blank.xml
@@ -29,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/poster_image"
+            android:layout_gravity="center"
             android:scaleType="fitXY"
             android:visibility="gone">
         </androidx.appcompat.widget.AppCompatImageView>
