--- a/brightcovelibrary/src/main/res/layout/fragment_blank.xml
+++ b/brightcovelibrary/src/main/res/layout/fragment_blank.xml
@@ -25,11 +25,11 @@
             android:layout_height="match_parent"
             android:background="@android:color/black" />
         <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/poster_image"
             android:layout_gravity="center"
-            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
             android:visibility="gone">
         </androidx.appcompat.widget.AppCompatImageView>
         <androidx.appcompat.widget.AppCompatImageView
