--- a/app/src/main/res/values-en/arrays.xml
+++ b/app/src/main/res/values-en/arrays.xml
@@ -6,6 +6,7 @@
         <item>My Watchlist</item>
         <item>My Watch History</item>
         <item>My Downloads</item>
+        <item>VIPA Kids</item>
         <item>Contact Us</item>
         <item>Frequently Ask Questions</item>
         <item>About VIPA</item>
@@ -47,6 +48,7 @@
         <item>My Watchlist</item>
         <item>My Watch History</item>
         <item>My Downloads</item>
+        <item>VIPA Kids</item>
         <item>Contact Us</item>
         <item>Frequently Ask Questions</item>
         <item>About VIPA</item>
@@ -55,6 +57,17 @@
         <item>Settings</item>
         <item>Terms and Conditions</item>
         <item>Privacy Policy</item>
+    </string-array>
+    <string-array name="more_kids_mode">
+        <item>Leave Kids Mode</item>
+        <item>My Watchlist</item>
+        <item>My Downloads</item>
+        <item>Contact Us</item>
+        <item>Frequently Ask Questions</item>
+        <item>About VIPA</item>
+        <item>Feedback</item>
+        <item>Settings</item>
+        <item>Logout</item>
     </string-array>
     <string-array name="gender_array">
         <item>Gender</item>
