--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -8,9 +8,9 @@
         android:layout_height="?android:attr/actionBarSize">
 
         <RelativeLayout
+            android:id="@+id/rl_toolBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="?attr/toolbar_background">
+            android:layout_height="match_parent">
 
 
             <LinearLayout
