--- a/app/src/main/res/values-th/arrays.xml
+++ b/app/src/main/res/values-th/arrays.xml
@@ -71,9 +71,9 @@
         <item>คำถามที่พบบ่อย</item>
         <item>เกี่ยวกับเรา</item>
         <item>ข้อเสนอแนะ</item>
-        <item>การตั้งค่า</item>
-        <item>ออกจากระบบ</item>
+        <item>แอปพลิเคชันอื่น ๆ</item>
     </string-array>
+
 
 
 
