--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -84,11 +84,13 @@
                 <ImageView
                     android:id="@+id/home_icon"
                     android:layout_width="@dimen/toolbar_logo_icon_width"
-                    android:layout_height="@dimen/toolbar_logo_icon_height"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center"
                     android:layout_toRightOf="@+id/back_layout"
                     android:contentDescription="TODO"
-                    android:src="@drawable/vipalogo180"
-                    android:layout_gravity="center"/>
+
+
+                    />
 
 
             </LinearLayout>
