--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -68,9 +68,10 @@
         <item>Frequently Ask Questions</item>
         <item>About VIPA</item>
         <item>Feedback</item>
-        <item>Settings</item>
-        <item>Logout</item>
+        <item>Other Applications</item>
     </string-array>
+
+
 
     <string-array name="download_quality">
         <item>Full HD</item>
