--- a/app/src/main/res/values-th/arrays.xml
+++ b/app/src/main/res/values-th/arrays.xml
@@ -2,11 +2,11 @@
 <resources>
 
     <string-array name="more_with_login">
+        <item>VIPA Kids</item>
         <item>จัดการโปรไฟล์</item>
         <item>รายการโปรดของฉัน</item>
         <item>ประวัติการรับชม</item>
         <item>ดาวน์โหลดของฉัน</item>
-        <item>VIPA Kids</item>
         <item>ติดต่อเรา</item>
         <item>คำถามที่พบบ่อย</item>
         <item>เกี่ยวกับเรา</item>
@@ -45,11 +45,11 @@
     </string-array>
 
     <string-array name="more_logout">
+        <item>VIPA Kids</item>
         <item>จัดการโปรไฟล์</item>
         <item>รายการโปรดของฉัน</item>
         <item>ประวัติการรับชม</item>
         <item>ดาวน์โหลดของฉัน</item>
-        <item>VIPA Kids</item>
         <item>ติดต่อเรา</item>
         <item>คำถามที่พบบ่อย</item>
         <item>เกี่ยวกับเรา</item>
@@ -64,8 +64,9 @@
 
     </string-array>
     <string-array name="more_kids_mode">
-        <item>Leave Kids Mode</item>
+        <item>ออกจากคิดส์โหมด</item>
         <item>รายการโปรดของฉัน</item>
+        <item>ประวัติการรับชม</item>
         <item>ดาวน์โหลดของฉัน</item>
         <item>ติดต่อเรา</item>
         <item>คำถามที่พบบ่อย</item>
