--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,11 +2,11 @@
 <resources>
 
     <string-array name="more_with_login">
+        <item>VIPA Kids</item>
         <item>Manage Account</item>
         <item>My Watchlist</item>
         <item>My Watch History</item>
         <item>My Downloads</item>
-        <item>VIPA Kids</item>
         <item>Contact Us</item>
         <item>Frequently Ask Questions</item>
         <item>About VIPA</item>
@@ -45,11 +45,11 @@
     </string-array>
 
     <string-array name="more_logout">
+        <item>VIPA Kids</item>
         <item>Manage Account</item>
         <item>My Watchlist</item>
         <item>My Watch History</item>
         <item>My Downloads</item>
-        <item>VIPA Kids</item>
         <item>Contact Us</item>
         <item>Frequently Ask Questions</item>
         <item>About VIPA</item>
@@ -63,6 +63,7 @@
     <string-array name="more_kids_mode">
         <item>Leave Kids Mode</item>
         <item>My Watchlist</item>
+        <item>My Watch History</item>
         <item>My Downloads</item>
         <item>Contact Us</item>
         <item>Frequently Ask Questions</item>
