--- a/app/src/main/res/values-en/arrays.xml
+++ b/app/src/main/res/values-en/arrays.xml
@@ -2,11 +2,12 @@
 <resources>
 
     <string-array name="more_with_login">
-        <item>VIPA Kids</item>
+
         <item>Manage Account</item>
         <item>My Watchlist</item>
         <item>My Watch History</item>
         <item>My Downloads</item>
+        <item>VIPA Kids</item>
         <item>Contact Us</item>
         <item>Frequently Ask Questions</item>
         <item>About VIPA</item>
@@ -44,11 +45,12 @@
     </string-array>
 
     <string-array name="more_logout">
-        <item>VIPA Kids</item>
+
         <item>Manage Account</item>
         <item>My Watchlist</item>
         <item>My Watch History</item>
         <item>My Downloads</item>
+        <item>VIPA Kids</item>
         <item>Contact Us</item>
         <item>Frequently Ask Questions</item>
         <item>About VIPA</item>
@@ -58,7 +60,7 @@
         <item>Terms and Conditions</item>
         <item>Privacy Policy</item>
     </string-array>
-    <string-array name="more_kids_mode">
+    <string-array name="more_kids_mode_login">
         <item>Leave Kids Mode</item>
         <item>My Watchlist</item>
         <item>My Watch History</item>
@@ -69,6 +71,14 @@
         <item>Feedback</item>
         <item>Other Applications</item>
 
+    </string-array>
+    <string-array name="more_kids_mode_logout">
+        <item>Leave Kids Mode</item>
+        <item>Contact Us</item>
+        <item>Frequently Ask Questions</item>
+        <item>About VIPA</item>
+        <item>Feedback</item>
+        <item>Other Applications</item>
     </string-array>
 
     <string-array name="gender_array">
