--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -129,7 +129,7 @@
                                         android:textAllCaps="false"
                                         android:textColor="@color/white"
                                         android:textSize="@dimen/_12sdp"
-                                        android:visibility="visible"
+                                        android:visibility="gone"
 
                                         />
 
