--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -171,9 +171,11 @@
             android:visibility="gone"/>
 
         <RelativeLayout
+            android:id="@+id/notification_setting"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/toolbarBackLeft"
+            android:layout_marginTop="@dimen/NontonSize15"
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/noti"
@@ -202,16 +204,16 @@
 
 
 
-                <Switch
-                    android:id="@+id/notification_setting"
+                <ImageView
+
                     android:layout_width="wrap_content"
-                    android:layout_height="64dp"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="10dp"
                     android:gravity="center"
-                    android:theme="@style/SwitchTheme"
+                    android:src="@drawable/right_direction_icon"
                     />
 
 
@@ -222,7 +224,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/toolbarBackLeft"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/NontonSize8">
             <ImageView
                 android:id="@+id/bingeWatch"
                 android:layout_width="wrap_content"
