removed shadow from hero banner

--- a/app/src/main/res/layout/layout_hero_landscape_item.xml
+++ b/app/src/main/res/layout/layout_hero_landscape_item.xml
@@ -43,7 +43,7 @@
                 android:background="@drawable/placeholder_landscape"
                 android:contentDescription="@string/slider_image_content_discription"
                 android:scaleType="fitXY" />
-
+<!--            android:background="@drawable/above_shado"-->
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
