--- a/app/src/main/res/layout/layout_hero_poster_item.xml
+++ b/app/src/main/res/layout/layout_hero_poster_item.xml
@@ -45,12 +45,11 @@
                 android:layout_marginEnd="0dp"
                 android:contentDescription="@string/slider_image_content_discription"
                 android:scaleType="fitXY" />
-
+<!--            android:background="@drawable/above_shado"-->
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="bottom"
-                android:background="@drawable/above_shado"
                 android:gravity="bottom"
                 android:paddingStart="5dp"
                 android:paddingBottom="5dp">
