welcome screen wip

--- a/app/src/main/res/layout/fragment_step_three.xml
+++ b/app/src/main/res/layout/fragment_step_three.xml
@@ -2,24 +2,35 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/imageView"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:layout_marginEnd="0dp"-->
+<!--            android:layout_marginStart="0dp"-->
+<!--            android:layout_marginTop="0dp"-->
+<!--            app:srcCompat="@drawable/second"-->
+<!--            app:layout_constraintDimensionRatio="H,9:16"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
-            app:srcCompat="@drawable/second"
-            app:layout_constraintDimensionRatio="H,9:16"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/second"
+        android:adjustViewBounds="true"/>
 
 <!--    <RelativeLayout-->
 <!--        android:layout_width="match_parent"-->
@@ -99,6 +110,6 @@
 <!--            android:layout_marginLeft="@dimen/_20sdp"-->
 <!--            android:layout_marginRight="@dimen/_20sdp"-->
 <!--            android:background="@drawable/rounded_button_gray"/>-->
-<!--    </RelativeLayout>-->
+    </RelativeLayout>
 
 </layout>
