--- a/brightcovelibrary/src/main/res/values/colors.xml
+++ b/brightcovelibrary/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="blue">#2b71e2</color>
     <color name="theme_background">#1a1a1a</color>
     <color name="black_filter_text">#393939</color>
+    <color name="orange_mustard">#e77005</color>
+    <color name="ligh_blue">#0be7ef</color>
+    <color name="light_green">#689e0a</color>
+    <color name="mustard_light">#ea9502</color>
 </resources>
