commit ui change

--- a/app/src/main/res/values-th/arrays.xml
+++ b/app/src/main/res/values-th/arrays.xml
@@ -61,14 +61,13 @@
     </string-array>
     <string-array name="more_kids_mode_login">
         <item>ออกจากคิดส์โหมด</item>
-        <item>รายการโปรดของฉัน</item>
-        <item>ประวัติการรับชม</item>
-        <item>ดาวน์โหลดของฉัน</item>
         <item>ติดต่อเรา</item>
         <item>คำถามที่พบบ่อย</item>
         <item>เกี่ยวกับเรา</item>
         <item>ข้อเสนอแนะ</item>
         <item>แอปพลิเคชันอื่น ๆ</item>
+        <item>ข้อกำหนดและเงื่อนไข</item>
+        <item>นโยบายความเป็นส่วนตัว</item>
     </string-array>
     <string-array name="more_kids_mode_logout">
         <item>ออกจากคิดส์โหมด</item>
@@ -77,6 +76,8 @@
         <item>เกี่ยวกับเรา</item>
         <item>ข้อเสนอแนะ</item>
         <item>แอปพลิเคชันอื่น ๆ</item>
+        <item>ข้อกำหนดและเงื่อนไข</item>
+        <item>นโยบายความเป็นส่วนตัว</item>
     </string-array>
 
 
