--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -63,14 +63,13 @@
 
     <string-array name="more_kids_mode_login">
         <item>Leave Kids Mode</item>
-        <item>My Watchlist</item>
-        <item>My Watch History</item>
-        <item>My Downloads</item>
         <item>Contact Us</item>
         <item>Frequently Ask Questions</item>
         <item>About VIPA</item>
         <item>Feedback</item>
         <item>Other Applications</item>
+        <item>Terms and Conditions</item>
+        <item>Privacy Policy</item>
     </string-array>
     <string-array name="more_kids_mode_logout">
         <item>Leave Kids Mode</item>
@@ -79,6 +78,8 @@
         <item>About VIPA</item>
         <item>Feedback</item>
         <item>Other Applications</item>
+        <item>Terms and Conditions</item>
+        <item>Privacy Policy</item>
     </string-array>
 
 
