--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -84,14 +84,23 @@
                 <ImageView
                     android:id="@+id/home_icon"
                     android:layout_width="@dimen/toolbar_logo_icon_width"
-                    android:layout_height="24dp"
+                    android:layout_height="27dp"
                     android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:background="@drawable/vipalogo180"
                     android:layout_toRightOf="@+id/back_layout"
                     android:contentDescription="TODO"
-
-
                     />
-
+                <ImageView
+                    android:id="@+id/home_icon_kids"
+                    android:layout_width="90dp"
+                    android:layout_height="33dp"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:background="@drawable/vipa_logo_kids"
+                    android:layout_toRightOf="@+id/back_layout"
+                    android:contentDescription="TODO"
+                    />
 
             </LinearLayout>
 
