--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,6 +39,7 @@
     <color name="description_grey">#989898</color>
     <color name="less_white">#7de3e3e3</color>
     <color name="navy_blue">#191925</color>
+
     <color name="blue_color">#391F68</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="transparent_series">#99000003</color>
@@ -101,23 +102,25 @@
     <color name="grayOne">#eeedea</color>
 
     <color name="themeLight">#000000</color>
+    <color name="shimmer_color_animation">#DCDCDC</color>
+    <color name="light_shimmer_bg">#BEBEBE</color>
     <color name="theme_background_dark">#181818</color>
     <color name="more_icon_color">#1F1E2F</color>
     <color name="more_item_line_color">#F5F4F2</color>
     <color name="black_overlay">#66000000</color>
     <color name="more_text_color_dark">#ffffff</color>
-    <color name="more_text_color_light">#391F68</color>
+    <color name="more_text_color_light">#000000</color>
     <color name="toolbar_bg_color_dark">#000000</color>
-    <color name="toolbar_bg_color_light">#ffffff</color>
+    <color name="toolbar_bg_color_light">#009FFF</color>
     <color name="bottom_navigation_bg_dark">#272727</color>
-    <color name="bottom_navigation_bg_light">#ffffff</color>
+    <color name="bottom_navigation_bg_light">#272727</color>
     <color name="shimmerDark">#2d3239</color>
     <color name="shimmerLight">#e9e9e9</color>
     <color name="shimmer_color">#252d35</color>
     <color name="grey_color_dark">#98989e</color>
     <color name="popular_search_dark">#5b5f6c</color>
     <color name="search_hint_dark">#98989e</color>
-    <color name="moretitlecolor">#009FFF</color>
+    <color name="moretitlecolor">#000000</color>
     <color name="themeColorDark">#009FFF</color>
 
 
