--- a/app/src/main/res/layout/shimmer_layout_season.xml
+++ b/app/src/main/res/layout/shimmer_layout_season.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="?attr/backgroundColor">
+        android:background="?attr/shimmer_backgroundColor">
 
         <!-- MOCK Layout (when you are still fetching data) -->
         <com.facebook.shimmer.ShimmerFrameLayout
@@ -67,7 +67,7 @@
                                 android:layout_marginStart="0dp"
                                 android:layout_marginTop="0dp"
                                 android:layout_marginEnd="0dp"
-                                android:background="@color/shimmerDark"
+                                android:background="?attr/shimmer_animation_dark"
                                 android:clickable="false"
                                 android:keepScreenOn="true"
                                 app:layout_constraintDimensionRatio="H,16:9"
@@ -95,20 +95,20 @@
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/NontonSize13"
                             android:layout_marginRight="@dimen/NontonSize50"
-                            android:background="@color/shimmerDark" />
+                            android:background="?attr/shimmer_animation_dark" />
 
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/NontonSize8"
                             android:layout_marginTop="@dimen/NontonSize10"
                             android:layout_marginRight="@dimen/NontonSize50"
-                            android:background="@color/shimmerDark" />
+                            android:background="?attr/shimmer_animation_dark" />
 
                         <View
                             android:layout_width="@dimen/NontonSize150"
                             android:layout_height="@dimen/NontonSize10"
                             android:layout_marginTop="@dimen/NontonSize10"
-                            android:background="@color/shimmerDark" />
+                            android:background="?attr/shimmer_animation_dark" />
 
                         <RelativeLayout
                             android:layout_width="match_parent"
@@ -123,7 +123,7 @@
                                 android:layout_height="@dimen/NontonSize15"
                                 android:layout_alignParentLeft="true"
                                 android:layout_gravity="left|center_vertical"
-                                android:background="@color/shimmerDark" />
+                                android:background="?attr/shimmer_animation_dark" />
 
                             <View
                                 android:layout_width="@dimen/NontonSize60"
@@ -132,7 +132,7 @@
                                 android:layout_gravity="right|center_vertical"
                                 android:layout_marginRight="@dimen/NontonSize30"
 
-                                android:background="@color/shimmerDark" />
+                                android:background="?attr/shimmer_animation_dark" />
 
                         </RelativeLayout>
 
@@ -147,27 +147,27 @@
                                 android:layout_width="@dimen/NontonSize40"
                                 android:layout_height="@dimen/NontonSize45"
                                 android:layout_marginTop="8dp"
-                                android:background="@color/shimmerDark" />
+                                android:background="?attr/shimmer_animation_dark" />
 
                             <View
                                 android:layout_width="@dimen/NontonSize40"
                                 android:layout_height="@dimen/NontonSize45"
                                 android:layout_marginLeft="@dimen/NontonSize10"
                                 android:layout_marginTop="8dp"
-                                android:background="@color/shimmerDark" />
+                                android:background="?attr/shimmer_animation_dark" />
 
                             <View
                                 android:layout_width="@dimen/NontonSize40"
                                 android:layout_height="@dimen/NontonSize45"
                                 android:layout_marginLeft="@dimen/NontonSize10"
                                 android:layout_marginTop="8dp"
-                                android:background="@color/shimmerDark" />
+                                android:background="?attr/shimmer_animation_dark" />
                             <View
                                 android:layout_width="@dimen/NontonSize40"
                                 android:layout_height="@dimen/NontonSize45"
                                 android:layout_marginLeft="@dimen/NontonSize10"
                                 android:layout_marginTop="8dp"
-                                android:background="@color/shimmerDark"
+                                android:background="?attr/shimmer_animation_dark"
                                 android:visibility="gone"/>
 
                         </LinearLayout>
@@ -200,7 +200,7 @@
                     android:layout_height="@dimen/NontonSize13"
                     android:layout_marginTop="@dimen/NontonSize8"
                     android:layout_marginRight="@dimen/NontonSize50"
-                    android:background="@color/shimmerDark" />
+                    android:background="?attr/shimmer_animation_dark" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -214,7 +214,7 @@
                         android:layout_width="0dp"
                         android:layout_height="@dimen/_15sdp"
                         android:layout_weight="1"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                     <View
                         android:layout_width="0dp"
@@ -222,13 +222,13 @@
                         android:layout_marginLeft="@dimen/NontonSize8"
                         android:layout_marginRight="@dimen/NontonSize8"
                         android:layout_weight="13"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                     <View
                         android:layout_width="0dp"
                         android:layout_height="@dimen/_15sdp"
                         android:layout_weight="1"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                 </LinearLayout>
 
@@ -237,14 +237,14 @@
                     android:layout_height="@dimen/NontonSize8"
                     android:layout_marginTop="@dimen/NontonSize10"
                     android:layout_marginRight="@dimen/NontonSize50"
-                    android:background="@color/shimmerDark" />
+                    android:background="?attr/shimmer_animation_dark" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/NontonSize10"
                     android:layout_marginTop="@dimen/NontonSize10"
                     android:layout_marginBottom="@dimen/NontonSize8"
-                    android:background="@color/shimmerDark" />
+                    android:background="?attr/shimmer_animation_dark" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -258,7 +258,7 @@
                         android:layout_width="0dp"
                         android:layout_height="@dimen/_15sdp"
                         android:layout_weight="1"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                     <View
                         android:layout_width="0dp"
@@ -266,13 +266,13 @@
                         android:layout_marginLeft="@dimen/NontonSize8"
                         android:layout_marginRight="@dimen/NontonSize8"
                         android:layout_weight="13"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                     <View
                         android:layout_width="0dp"
                         android:layout_height="@dimen/_15sdp"
                         android:layout_weight="1"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                 </LinearLayout>
 
@@ -281,14 +281,14 @@
                     android:layout_height="@dimen/NontonSize8"
                     android:layout_marginTop="@dimen/NontonSize10"
                     android:layout_marginRight="@dimen/NontonSize50"
-                    android:background="@color/shimmerDark" />
+                    android:background="?attr/shimmer_animation_dark" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/NontonSize10"
                     android:layout_marginTop="@dimen/NontonSize10"
                     android:layout_marginBottom="@dimen/NontonSize8"
-                    android:background="@color/shimmerDark" />
+                    android:background="?attr/shimmer_animation_dark" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -302,7 +302,7 @@
                         android:layout_width="0dp"
                         android:layout_height="@dimen/_15sdp"
                         android:layout_weight="1"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                     <View
                         android:layout_width="0dp"
@@ -310,13 +310,13 @@
                         android:layout_marginLeft="@dimen/NontonSize8"
                         android:layout_marginRight="@dimen/NontonSize8"
                         android:layout_weight="13"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                     <View
                         android:layout_width="0dp"
                         android:layout_height="@dimen/_15sdp"
                         android:layout_weight="1"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                 </LinearLayout>
 
@@ -325,14 +325,14 @@
                     android:layout_height="@dimen/NontonSize8"
                     android:layout_marginTop="@dimen/NontonSize10"
                     android:layout_marginRight="@dimen/NontonSize50"
-                    android:background="@color/shimmerDark" />
+                    android:background="?attr/shimmer_animation_dark" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/NontonSize10"
                     android:layout_marginTop="@dimen/NontonSize10"
                     android:layout_marginBottom="@dimen/NontonSize8"
-                    android:background="@color/shimmerDark" />
+                    android:background="?attr/shimmer_animation_dark" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -346,7 +346,7 @@
                         android:layout_width="0dp"
                         android:layout_height="@dimen/_15sdp"
                         android:layout_weight="1"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                     <View
                         android:layout_width="0dp"
@@ -354,13 +354,13 @@
                         android:layout_marginLeft="@dimen/NontonSize8"
                         android:layout_marginRight="@dimen/NontonSize8"
                         android:layout_weight="13"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                     <View
                         android:layout_width="0dp"
                         android:layout_height="@dimen/_15sdp"
                         android:layout_weight="1"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                 </LinearLayout>
 
@@ -369,14 +369,14 @@
                     android:layout_height="@dimen/NontonSize8"
                     android:layout_marginTop="@dimen/NontonSize10"
                     android:layout_marginRight="@dimen/NontonSize50"
-                    android:background="@color/shimmerDark" />
+                    android:background="?attr/shimmer_animation_dark" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/NontonSize10"
                     android:layout_marginTop="@dimen/NontonSize10"
                     android:layout_marginBottom="@dimen/NontonSize8"
-                    android:background="@color/shimmerDark" />
+                    android:background="?attr/shimmer_animation_dark" />
 
             </LinearLayout>
 
@@ -404,7 +404,7 @@
                         android:layout_width="@dimen/NontonSize150"
                         android:layout_height="@dimen/NontonSize15"
                         android:layout_marginTop="@dimen/NontonSize10"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
 
                 </LinearLayout>
@@ -418,7 +418,7 @@
                     <View
                         android:layout_width="@dimen/NontonSize60"
                         android:layout_height="@dimen/NontonSize20"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                     <View
                         android:layout_width="match_parent"
@@ -426,7 +426,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="@dimen/NontonSize10"
                         android:layout_marginRight="@dimen/NontonSize40"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                 </LinearLayout>
 
@@ -439,7 +439,7 @@
                     <View
                         android:layout_width="@dimen/NontonSize60"
                         android:layout_height="@dimen/NontonSize20"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                     <View
                         android:layout_width="match_parent"
@@ -447,7 +447,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="@dimen/NontonSize10"
                         android:layout_marginRight="@dimen/NontonSize40"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                 </LinearLayout>
 
@@ -460,7 +460,7 @@
                     <View
                         android:layout_width="@dimen/NontonSize60"
                         android:layout_height="@dimen/NontonSize20"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                     <View
                         android:layout_width="match_parent"
@@ -468,7 +468,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="@dimen/NontonSize10"
                         android:layout_marginRight="@dimen/NontonSize40"
-                        android:background="@color/shimmerDark" />
+                        android:background="?attr/shimmer_animation_dark" />
 
                 </LinearLayout>
 
