--- a/app/src/main/res/layout/toolbar_search_result.xml
+++ b/app/src/main/res/layout/toolbar_search_result.xml
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:background="@drawable/ic_clear_black_24dp"
+                android:src="?attr/close_icon"
                 android:contentDescription="TODO"
                 android:tint="@color/white"
                 android:visibility="gone" />
