--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -86,26 +86,31 @@
         <item name="list_shimmer">@color/shimmerLight</item>
         <item name="title_color">@color/black</item>
         <item name="backgroundColor">@color/white</item>
+        <item name="shimmer_backgroundColor">@color/light_shimmer_bg</item>
+
+        <item name="shimmer_animation_dark">@color/shimmer_color_animation</item>
         <item name="search_edt_backgroundColor">@color/search_grey</item>
-        <item name="header_text_color">@color/navy_blue</item>
+        <item name="header_text_color">@color/description_title_yellow</item>
         <item name="more_text_color">@color/more_text_color_light</item>
         <item name="circle_item_background_color">@color/white</item>
         <item name="simmer_background">@color/less_white</item>
         <item name="toolbar_background">@color/toolbar_bg_color_light</item>
-        <item name="search_icon_background">@drawable/search_navy_blue</item>
+        <item name="search_icon_background">@drawable/search</item>
         <item name="more_layout_background_color">@color/white</item>
         <item name="more_recyclerview_background_color">@color/white</item>
         <item name="more_item_text_color">@color/navy_blue</item>
         <item name="user_name_text_color">@color/navy_blue</item>
         <item name="change_language_text_color">@color/navy_blue</item>
         <item name="more_item_bottom_line_color">@color/subtitlecolor</item>
-        <item name="toolbar_text_color">@color/navy_blue</item>
+        <item name="toolbar_text_color">@color/white</item>
         <item name="toolbar_back_arrow">@drawable/back_arrow_navy_blue</item>
         <item name="new_password_text_and_hint_color">@color/navy_blue</item>
         <item name="change_password_bakground_color">@color/white</item>
         <item name="confirm_password_text_and_hint_color">@color/navy_blue</item>
         <item name="change_password_bottom_line_color">@color/subtitlecolor</item>
         <item name="password_toggle">@drawable/password_visibility_light</item>
+        <item name="search_toolbar_bg">@color/popular_search_color</item>
+
         <item name="bottomNavigationBackground">@color/bottom_navigation_bg_light</item>
         <item name="app_edit_text_color">@color/white</item>
         <item name="menuItemSelector">@drawable/menu_item_selector_light</item>
@@ -146,8 +151,11 @@
         <item name="search_background">@color/white</item>
         <item name="search_toolbar_background">@color/white</item>
         <item name="search_box_background">@drawable/search_header_drawable_white</item>
-        <item name="search_text_color">@color/navy_blue</item>
-        <item name="cancel_text_color">@color/navy_blue</item>
+        <item name="search_text_color">@color/white</item>
+        <item name="close_icon">@drawable/ic_clear_black_24dp</item>
+
+
+        <item name="cancel_text_color">@color/white</item>
         <item name="result_activity_background_color">@color/white</item>
         <item name="row_search_title_color">@color/navy_blue</item>
         <item name="recomended_rail_theme_color">@color/white</item>
@@ -204,6 +212,8 @@
         <item name="title_color">@color/description_title_white</item>
         <item name="search_edt_backgroundColor">@color/theme_background_dark</item>
         <item name="backgroundColor">@color/theme_background_dark</item>
+        <item name="shimmer_backgroundColor">@color/theme_background_dark</item>
+        <item name="shimmer_animation_dark">@color/shimmerDark</item>
         <item name="header_text_color">@color/description_title_yellow</item>
         <item name="more_text_color">@color/more_text_color_dark</item>
         <item name="circle_item_background_color">@color/black</item>
@@ -230,6 +240,9 @@
 
 
         <item name="bottomNavigationBackground">@color/bottom_navigation_bg_dark</item>
+        <item name="search_toolbar_bg">@color/bottom_navigation_bg_dark</item>
+
+
         <item name="toolbar_background">@color/toolbar_bg_color_dark</item>
 
 
@@ -274,6 +287,8 @@
         <item name="search_toolbar_background">@color/bottom_navigation_bg_dark</item>
         <item name="search_box_background">@drawable/search_header_drawable</item>
         <item name="search_text_color">@color/white</item>
+        <item name="close_icon">@drawable/ic_clear_black_24dp</item>
+
         <item name="cancel_text_color">@color/grey_color_dark</item>
         <item name="result_activity_background_color">@color/black_theme_color</item>
         <item name="row_search_title_color">@color/description_title_white</item>
